# elf-parser

./: .gitignore  LICENSE.md  Makefile  README.md  README.txt  disasm.c  elf-parser-main.c  elf-parser.c  elf-parser.h  meson.build
.github/: FUNDING.yml
hola/: hola  hola.S  hola.c  objdump-text.S  text.S
